# advsndsw

./: .git-blame-ignore-revs  .gitlab-ci.yml  .pre-commit-config.yaml  CMakeLists.txt  README.md
.github/: pull.yml
TimeDet/: TimeDet.cxx  TimeDetHit.cxx  TimeDetPoint.cxx
UpstreamTagger/: UpstreamTagger.cxx  UpstreamTagger.h  UpstreamTaggerHit.cxx  UpstreamTaggerPoint.cxx
analysis/: CMakeLists.txt  neutrinoFilterGoldenSample.cxx  neutrinoFilterGoldenSample_stage2.py
analysis/cuts/: CMakeLists.txt  sndAvgDSFiducialCut.cxx  sndAvgDSFiducialCut.h  sndAvgSciFiFiducialCut.cxx  sndAvgSciFiFiducialCut.h  sndBaseCut.h  sndDSActivityCut.cxx  sndDSActivityCut.h  sndDSVetoCut.cxx  sndDSVetoCut.h  sndEventDeltat.cxx  sndEventDeltat.h  sndEventHeaderBaseCut.cxx  sndEventHeaderBaseCut.h  sndMinSciFiConsecutivePlanes.cxx  sndMinSciFiConsecutivePlanes.h  sndMinSciFiHitsCut.cxx  sndMinSciFiHitsCut.h  sndMuFilterBaseCut.cxx  sndMuFilterBaseCut.h  sndSciFiBaseCut.cxx  sndSciFiBaseCut.h  sndSciFiStationCut.cxx  sndSciFiStationCut.h  sndUSQDCCut.cxx  sndUSQDCCut.h  sndVetoCut.cxx  sndVetoCut.h
analysis/scripts/: neutralHadronMC_kaons_FTFP_tgtarea.list  neutralHadronMC_kaons_tgtarea.list  neutralHadronMC_neutrons_FTFP_tgtarea.list  neutralHadronMC_neutrons_tgtarea.list  run_neutrino_filter_range.sh  run_neutrino_filter_range.sub
analysis/tools/: CMakeLists.txt  sndSciFiTools.cxx  sndSciFiTools.h
charmdet/: Box.cxx  Box.h  BoxContFact.cxx  BoxPoint.cxx  MillepedeCaller.cxx  MillepedeCaller.h  MufluxReco.cxx  MufluxReco.h  MufluxSpectrometer.cxx  MufluxSpectrometerHit.cxx  MufluxSpectrometerHit.h  MufluxSpectrometerPoint.cxx  MuonTagger.cxx  MuonTagger.h  MuonTaggerHit.cxx  MuonTaggerHit.h  MuonTaggerPoint.cxx  PixelModules.cxx  PixelModules.h  PixelModulesPoint.cxx  RPCTrack.cxx  ReProcessAbsorber.cxx  SciFi.cxx  SciFiHit.cxx  SciFiHit.h  SciFiPoint.cxx  Scintillator.cxx  ScintillatorHit.cxx  ScintillatorHit.h  ScintillatorPoint.cxx  ShipPixelHit.cxx  ShipPixelHit.h  Spectrometer.cxx  SpectrometerPoint.cxx  simAbsorber.py
conditionsDatabase/: factory.py  getconditions_condDB.py  list_conDB.py  requirements.txt  scifi_conDB.py  snd_conDB.py
digitization/: CMakeLists.txt  digitizationLinkDef.h  digitize.cxx  digitize.h  digitize_mc.cxx
doxygen/: Doxyfile  titlepage.md
ecal/: ecal.cxx  ecalAnalysisMaterial.cxx  ecalAnalysisSimple.cxx  ecalCellMC.cxx  ecalCluster.cxx  ecalClusterCalibration.cxx  ecalClusterFinder.cxx  ecalContFact.cxx  ecalDigi.cxx  ecalDrawer.cxx  ecalLightMap.cxx  ecalMatch.cxx  ecalMaximum.cxx  ecalMaximumLocator.cxx  ecalPoint.cxx  ecalPreCluster.h  ecalPrepare.cxx  ecalReco.cxx  ecalStructure.cxx  ecalStructure.h  ecalStructureFiller.cxx  ecalStructureFiller.h
field/: CMakeLists.txt  ShipBFieldMap.cxx  ShipBellField.cxx  ShipCompField.cxx  ShipConstField.cxx  ShipFieldCreator.cxx  ShipFieldMaker.cxx  ShipFieldPar.cxx  ShipGoliathField.cxx
gconfig/: DecayConfigPy8.C  Geane.C  SetCuts.C  UserDecay.C  flConfig.C  g4Config.C  g4ConfigNeutron.C  g4config.in
genfit/: genfitLinkDef.h
geometry/: AdvSND_geom_config.py  DS_SiPM_mapping.csv  US_SiPM_mapping.csv  Veto_SiPM_mapping.csv  ecal_rect5x10m2.geo  geometry_config.py  hcal_rect.geo  (+5 more)
shipgen/: ALPACAGenerator.cxx  ALPACAGenerator.h  CMakeLists.txt  CosmicsGenerator.cxx  CosmicsGenerator.h  DPPythia8Generator.cxx  FixedTargetGenerator.cxx  FixedTargetGenerator.h  GenLinkDef.h  GenieGenerator.cxx  GenieGenerator.h  HNLPythia8Generator.cxx  MuDISGenerator.cxx  MuDISGenerator.h  MuonBackGenerator.cxx  NeutronGenerator_FLUKA.cxx  NeutronGenerator_FLUKA.h  NtupleGenerator.cxx  NtupleGenerator_FLUKA.cxx  NtupleGenerator_FLUKA.h  NuageGenerator.cxx  Pythia6Generator.cxx  Pythia8Generator.cxx  addAuxiliaryToGST.cxx  sndlhcGSimpleNtpConverter.cxx  tPythia6Generator.cxx
shipgen/genie_config/SNDG18_02a/: CommonDecay.xml  CommonParam.xml  LHAPDF6.xml  ModelConfiguration.xml  TuneGeneratorList.xml
shipgen/genie_config/SNDG18_02a/SNDG18_02a_01_000/: AivazisCharmPXSecLO.xml  BYPDF.xml  KovalenkoQELCharmPXSec.xml
shipgen/genie_config/SNDGHE19_00b/: CommonDecay.xml  CommonParam.xml  ModelConfiguration.xml  TuneGeneratorList.xml
shipgen/genie_config/SNDGHE19_00b/SNDGHE19_00b_01_000/: CommonParam.xml
(+457 files in other folders)
